<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/_30dp"
    android:elevation="@dimen/_20dp"
    android:orientation="vertical"
    android:background="@drawable/bg_permission_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextView.Font.Bold.20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"/>
        <TextView
            style="@style/TextView.Font.Regular.16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="@dimen/_20dp"
            android:text="@string/are_you_sure_you_want_to_log_out_from_the_application"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginHorizontal="@dimen/_10dp"
            style="@style/Button.Small.colorful.Stroke"
            android:layout_weight="1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginHorizontal="@dimen/_10dp"
            style="@style/Button.Simple.ColorFul"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>