<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/_20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextView.Font.Bold.32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10dp"
                android:text="@string/register"
                android:textColor="@color/black" />

            <TextView
                style="@style/TextView.Font.Medium.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10dp"
                android:text="@string/and_start_taking_notes"
                android:textColor="@color/dark_grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_10dp">

                <TextView
                    style="@style/TextView.Font.Medium.14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5dp"
                    android:text="@string/full_name"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_text_layout"
                    style="@style/TextInput.radius.8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:errorTextColor="@color/base_red"
                    app:hintTextColor="@color/base_grey">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/example_john_doe"
                        android:inputType="textPersonName"
                        android:textColorHint="@color/base_grey" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_10dp">

                <TextView
                    style="@style/TextView.Font.Medium.14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5dp"
                    android:text="@string/email_address"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_layout"
                    style="@style/TextInput.radius.8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:errorTextColor="@color/base_red"
                    app:hintTextColor="@color/base_grey">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/example_abc_xyz_com"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/base_grey" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_10dp">

                <TextView
                    style="@style/TextView.Font.Medium.14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5dp"
                    android:text="@string/password"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pwd_text_layout"
                    style="@style/TextInput.radius.8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:errorTextColor="@color/base_red"
                    app:hintTextColor="@color/base_grey">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pwd_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColorHint="@color/base_grey" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_10dp">

                <TextView
                    style="@style/TextView.Font.Medium.14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_5dp"
                    android:text="@string/retype_password"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/rePwd_text_layout"
                    style="@style/TextInput.radius.8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:errorTextColor="@color/base_red"
                    app:hintTextColor="@color/base_grey">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/rePwd_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColorHint="@color/base_grey" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/Button.Simple.ColorFul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10dp"
            android:gravity="center"
            android:text="@string/register"
            android:textAlignment="center" />

        <include layout="@layout/divider" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_google"
            style="@style/CardView.Stroke.Round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_12dp">

                <ImageView
                    android:layout_width="@dimen/_24dp"
                    android:layout_height="@dimen/_24dp"
                    android:src="@drawable/google" />

                <TextView
                    style="@style/TextView.Font.Regular.16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_10dp"
                    android:text="@string/register_with_google" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_30dp">

            <TextView
                style="@style/TextView.Font.Medium.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_any_account"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/txt_login"
                style="@style/TextView.Font.Medium.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_here"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/primary_base" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>