<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:layout_marginVertical="@dimen/_10dp"
        android:background="@drawable/bg_permission_dialog"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">

        <TextView
            style="@style/TextView.Font.Medium.16"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:gravity="center"
            android:text="@string/required_permission"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvSelectLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:gravity="center"
            android:text="@string/permission_description"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sp" />

        <TextView
            android:id="@+id/btnOk"
            style="@style/Button.Small.Fill"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:elevation="@dimen/_5dp"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>